2017-10-02 - James Downs <james.downs@salesforce.com> - 1.3.1
* all values are strings in this version of puppet, so handle
  the ownerkey values appropriately

2017-09-26 - James Downs <james.downs@salesforce.com> - 1.3.0
* add ownertrust_key parameter & unit tests
  values: false, 2-6, matching (Undefined, Never, Marginal, Full, Ultimate)
* fixup acceptance testing

2017-07-27 - Scott Brimhall <sbrimhall@salesforce.com> - 1.2.4
* add gpg_home and sign_key parameters & unit tests
* Update rspec-system tests to support Ubuntu 14, 16, Centos 7
* Update rspec-system tests to latest minor releases of Debian & CentOS 6
* Drop support for Ubuntu 10 & CentOS 5

2016-01-22 - Dejan Golja <dejan@golja.org> - 1.2.3
* Another retry to rebuild repack the module to fix the PaxHeaders bsd tar bug

2016-01-18 - Dejan Golja <dejan@golja.org> - 1.2.2
* module Remove PaxHeaders from distributed package, so it works with r10k

2015-07-04 - Dejan Golja <dejan@golja.org> - 1.2.1
* remove (present|absent) restriction on $package_ensure
* add support for SLES

2015-05-16 - Dejan Golja <dejan@golja.org> - 1.2.0
* autorequire user type when using gnupg_key (tnx to tcinel@atlassian.com)
* added two new custom facts:
  * gnupg_command - get full path to gpg exe
  * gnupg_installed - determine if gpg exe exists on system

2015-03-24 - Dejan Golja <dejan@golja.org> - 1.1.1
* supports username with -

2015-02-21 - Dejan Golja <dejan@golja.org> - 1.1.0
* properly supports private key (added new paramater key_type
  for gnupg_key type)
* added new parameter key_content for gnupg_key type
  to make it easier integrate hiera lookups. More info check README

Special thanks to Tobias Clemson (https://github.com/tobyclemson)

2014-10-20 - Dejan Golja <dejan@golja.org> - 1.0.0
* remove support for puppet 2.7.x due to the native type
* added beaker system spec tests
* Update type definition so it uses Puppet::Util::Execution.execute
  instead of Puppet::Util::SUIDManager.run_and_capture (deprecated)