@@ -1,3 +1,6 @@
+2017-10-03 - James Downs <james.downs@salesforce.com> - 1.3.2
+* ownertrust requires fingerprint
+
 2017-10-02 - James Downs <james.downs@salesforce.com> - 1.3.1
 * all values are strings in this version of puppet, so handle
   the ownerkey values appropriately
